--- a/src/main/resources/templates/CustomerView/opinions.html
+++ b/src/main/resources/templates/CustomerView/opinions.html
@@ -22,12 +22,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Strona główna</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="store">Strona główna</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">O nas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Flota rowerów</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about_us.html">Opinie</a></li>
-                    <li class="nav-item"><a class="nav-link" href="rules.html">Regulamin</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Kontakt</a></li>
+                    <li class="nav-item"><a class="nav-link" href="opinions">Opinie</a></li>
+                    <li class="nav-item"><a class="nav-link" href="regulations">Regulamin</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact">Kontakt</a></li>
                 </ul>
             </div>
             <form class="d-flex">
