--- a/src/main/resources/templates/CustomerView/contact.html
+++ b/src/main/resources/templates/CustomerView/contact.html
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-       
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -48,32 +47,52 @@
         </div>
     </header>
 
-    <div class="container px-4 px-lg-5">
-        <form>
-            <div class="form-group">
-              <label for="exampleFormControlInput1">Adres email</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Wprowadź swój adres email">
+    <div class="container">
+        <!--Google map-->
+        <div class="row">
+            <div class="col-9">
+                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 600px">
+                    <iframe src="https://maps.google.com/maps?q=gliwice&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                    style="border:0" allowfullscreen>
+                    </iframe>
+                </div>
             </div>
-            <div class="form-group">
-              <label for="exampleFormControlSelect1">Powód kontaktu</label>
-              <select class="form-control" id="exampleFormControlSelect1" >
-                <option>Dostarczono mi błędny rower</option>
-                <option>Rower uległ awarii</option>
-                <option>Rower został skradziony</option>
-                <option>Chciałbym wcześniej oddać rower</option>
-                <option>Inne</option>
-              </select>
+            <div class="col-3">
+                <div class="row mt-5">
+                   <div style="display: table;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
+                            <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z"/>
+                        </svg>
+                        <span style=" display:table-cell;vertical-align:middle;">
+                            <p class="font-weight-bold ms-lg-2" style="font-size: 20px;">+48 123 123 123</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div style="display: table;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+                        </svg>
+                         <span style=" display:table-cell;vertical-align:middle;">
+                             <p class="font-weight-bold ms-lg-3" style="font-size: 20px;">ul. Test Testów 100<br>Gliwice 44-100</p>
+                         </span>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div style="display: table;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+                        </svg>
+                        <span style=" display:table-cell;vertical-align:middle;">
+                            <p class="font-weight-bold ms-lg-4" style="font-size: 20px;">wypozyczalnia@gmail.com</p>
+                        </span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="exampleFormControlTextarea1">Dodatkowe informacje</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <div class="text-center">
-                <button type="button" class="btn btn-primary ">Send message</button>
-            </div>
-          </form>
-          
+        </div>
+        <!--Google Maps-->    
     </div>
+        
 
     <footer class="py-5 bg-dark">
         <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
