--- a/src/main/resources/templates/CustomerView/css/styles.css
+++ b/src/main/resources/templates/CustomerView/css/styles.css
@@ -10,6 +10,19 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+.map-container{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+  }
+  .map-container iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+  }
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
