--- a/src/main/resources/templates/CustomerView/rules.html
+++ b/src/main/resources/templates/CustomerView/rules.html
@@ -16,15 +16,15 @@
         <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#!">Wypożyczalnia</a>
+            <a class="navbar-brand" href="store">Wypożyczalnia</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="store">Strona główna</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">O nas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Flota rowerów</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutUs">O nas</a></li>
                     <li class="nav-item"><a class="nav-link" href="opinions">Opinie</a></li>
                     <li class="nav-item"><a class="nav-link" href="regulations">Regulamin</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact">Kontakt</a></li>
@@ -39,9 +39,7 @@
             </form>
         </div>
     </nav>
-    <div class="container px-4 px-lg-5">
-        
-    </div>
+    <!-- Header section -->
     <header class="bg-dark py-5">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
@@ -51,64 +49,42 @@
         </div>
     </header>
 
-
+<!-- Main content section -->
     <div class="container px-5 px-lg-5 text-left ">
-        
-          <p class="font-weight-bold text-center">1. Postanowienia ogólne</p>  
-<p>1.1 Niniejszy regulamin określa warunki korzystania z usług wypożyczalni rowerów.</p>
+        <p class="font-weight-bold text-center">1. Postanowienia ogólne</p>  
+        <p>1.1 Niniejszy regulamin określa warunki korzystania z usług wypożyczalni rowerów.</p>
+        <p>1.2 Wypożyczalnia rowerów, zwana dalej "Wypożyczalnią", świadczy usługi zgodnie z obowiązującymi przepisami prawa.</p>
+        <p>1.3 Osoba korzystająca z usług Wypożyczalni zobowiązana jest do przestrzegania postanowień niniejszego regulaminu.</p>
 
-<p>1.2 Wypożyczalnia rowerów, zwana dalej "Wypożyczalnią", świadczy usługi zgodnie z obowiązującymi przepisami prawa.</p>
+        <p class="font-weight-bold text-center">2. Warunki wypożyczania</p>
+        <p>2.1 Osoba wypożyczająca rower, zwana dalej "Klientem", powinna być osobą pełnoletnią.</p>
+        <p>2.2 Klient zobowiązany jest do okazania ważnego dokumentu tożsamości przed wypożyczeniem roweru.</p>
+        <p>2.3 Wypożyczenie roweru odbywa się na podstawie zawarcia umowy pomiędzy Klientem a Wypożyczalnią.</p>
+        <p>2.4 W przypadku osób niepełnoletnich, wypożyczenie roweru może nastąpić za zgodą rodziców lub opiekunów prawnie upoważnionych.</p>
 
-<p>1.3 Osoba korzystająca z usług Wypożyczalni zobowiązana jest do przestrzegania postanowień niniejszego regulaminu.</p>
+        <p class="font-weight-bold text-center">3. Opłaty</p>
+        <p>3.1 Koszty wypożyczenia roweru są określone w cenniku dostępnym w siedzibie Wypożyczalni oraz na stronie internetowej.</p>
+        <p>3.2 Klient zobowiązany jest uregulować opłaty za wypożyczenie przed rozpoczęciem korzystania z roweru.</p>
+        <p>3.3 W przypadku przekroczenia ustalonego czasu wypożyczenia, naliczane są dodatkowe opłaty zgodnie z obowiązującym cennikiem.</p>
 
-<p class="font-weight-bold text-center">2. Warunki wypożyczania</p>
-<p>2.1 Osoba wypożyczająca rower, zwana dalej "Klientem", powinna być osobą pełnoletnią.</p>
+        <p class="font-weight-bold text-center">4. Zasady korzystania z roweru</p>
+        <p>4.1 Klient zobowiązany jest do sprawdzenia stanu technicznego roweru przed rozpoczęciem wypożyczenia i natychmiast zgłoszenia wszelkich usterek.</p>
+        <p>4.2 Klient zobowiązany jest do zwrócenia roweru w stanie niepogorszonym w porównaniu do momentu wypożyczenia, z uwzględnieniem normalnego zużycia.</p>
+        <p>4.3 Klient ponosi odpowiedzialność za wszelkie szkody wyrządzone rowerowi w trakcie okresu wypożyczenia.</p>
 
-<p>2.2 Klient zobowiązany jest do okazania ważnego dokumentu tożsamości przed wypożyczeniem roweru.</p>
+        <p class="font-weight-bold text-center">5. Bezpieczeństwo</p>
+        <p>5.1 Klient zobowiązany jest do korzystania z roweru zgodnie z przepisami ruchu drogowego.</p>
+        <p>5.2 Klient zobowiązany jest do używania dostarczonych elementów odblaskowych oraz stosowania się do zasad bezpieczeństwa.</p>
+        <p>5.3 W razie kradzieży roweru, Klient zobowiązany jest niezwłocznie powiadomić Wypożyczalnię oraz organy ścigania.</p>
+        <p class="font-weight-bold text-center">6. Postanowienia końcowe</p>
 
-<p>2.3 Wypożyczenie roweru odbywa się na podstawie zawarcia umowy pomiędzy Klientem a Wypożyczalnią.</p>
-
-<p>2.4 W przypadku osób niepełnoletnich, wypożyczenie roweru może nastąpić za zgodą rodziców lub opiekunów prawnie upoważnionych.</p>
-
-<p class="font-weight-bold text-center">3. Opłaty</p>
-<p>3.1 Koszty wypożyczenia roweru są określone w cenniku dostępnym w siedzibie Wypożyczalni oraz na stronie internetowej.</p>
-
-<p>3.2 Klient zobowiązany jest uregulować opłaty za wypożyczenie przed rozpoczęciem korzystania z roweru.</p>
-
-<p>3.3 W przypadku przekroczenia ustalonego czasu wypożyczenia, naliczane są dodatkowe opłaty zgodnie z obowiązującym cennikiem.</p>
-
-<p class="font-weight-bold text-center">4. Zasady korzystania z roweru</p>
-<p>4.1 Klient zobowiązany jest do sprawdzenia stanu technicznego roweru przed rozpoczęciem wypożyczenia i natychmiast zgłoszenia wszelkich usterek.</p>
-
-<p>4.2 Klient zobowiązany jest do zwrócenia roweru w stanie niepogorszonym w porównaniu do momentu wypożyczenia, z uwzględnieniem normalnego zużycia.</p>
-
-<p>4.3 Klient ponosi odpowiedzialność za wszelkie szkody wyrządzone rowerowi w trakcie okresu wypożyczenia.</p>
-
-<p class="font-weight-bold text-center">5. Bezpieczeństwo</p>
-<p>5.1 Klient zobowiązany jest do korzystania z roweru zgodnie z przepisami ruchu drogowego.</p>
-
-<p>5.2 Klient zobowiązany jest do używania dostarczonych elementów odblaskowych oraz stosowania się do zasad bezpieczeństwa.</p>
-
-<p>5.3 W razie kradzieży roweru, Klient zobowiązany jest niezwłocznie powiadomić Wypożyczalnię oraz organy ścigania.</p>
-
-<p class="font-weight-bold text-center">6. Postanowienia końcowe</p>
-<p>6.1 Wszelkie spory wynikłe z korzystania z usług Wypożyczalni rozstrzygane są zgodnie z obowiązującym prawem.</p>
-
-<p>6.2 Wypożyczalnia zastrzega sobie prawo do zmiany regulaminu. Zmiany wchodzą w życie po umieszczeniu ich na stronie internetowej Wypożyczalni.</p>
-
-<p>6.3 Niniejszy regulamin obowiązuje od dnia jego ogłoszenia.</p>
-        </p>
-        
+        <p>6.1 Wszelkie spory wynikłe z korzystania z usług Wypożyczalni rozstrzygane są zgodnie z obowiązującym prawem.</p>
+        <p>6.2 Wypożyczalnia zastrzega sobie prawo do zmiany regulaminu. Zmiany wchodzą w życie po umieszczeniu ich na stronie internetowej Wypożyczalni.</p>
+        <p>6.3 Niniejszy regulamin obowiązuje od dnia jego ogłoszenia.</p>  
     </div>
-
+    <!-- Footer -->
     <footer class="py-5 bg-dark">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Wypozyczalnia</p></div>
     </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
 </body>
