--- a/src/main/resources/templates/CustomerView/contact.html
+++ b/src/main/resources/templates/CustomerView/contact.html
@@ -17,13 +17,12 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#!">Wypożyczalnia</a>
+            <a class="navbar-brand" href="store">Wypożyczalnia</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="store">Strona główna</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">O nas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Flota rowerów</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutUs">O nas</a></li>
                     <li class="nav-item"><a class="nav-link" href="opinions">Opinie</a></li>
                     <li class="nav-item"><a class="nav-link" href="regulations">Regulamin</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact">Kontakt</a></li>
@@ -51,9 +50,16 @@
         <!--Google map-->
         <div class="row">
             <div class="col-9">
-                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 600px">
+                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 600px; overflow:hidden;
+                 padding-bottom:56.25%;
+                 position:relative;
+                 height:0;">
                     <iframe src="https://maps.google.com/maps?q=gliwice&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-                    style="border:0" allowfullscreen>
+                    style="border:0; left:0;
+                     top:0;
+                     height:100%;
+                     width:100%;
+                     position:absolute;" allowfullscreen>
                     </iframe>
                 </div>
             </div>
@@ -95,12 +101,10 @@
         
 
     <footer class="py-5 bg-dark">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Wypozyczalnia</p></div>
     </footer>
  
     <script defer="" src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon="{&quot;rayId&quot;:&quot;8288b2bdfeb366e0&quot;,&quot;version&quot;:&quot;2023.10.0&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;}" crossorigin="anonymous"></script>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     </body>
