--- a/src/main/resources/templates/CustomerView/opinions.html
+++ b/src/main/resources/templates/CustomerView/opinions.html
@@ -16,15 +16,15 @@
         <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#!">Wypożyczalnia</a>
+            <a class="navbar-brand" href="store">Wypożyczalnia</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="store">Strona główna</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">O nas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Flota rowerów</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutUs">O nas</a></li>
                     <li class="nav-item"><a class="nav-link" href="opinions">Opinie</a></li>
                     <li class="nav-item"><a class="nav-link" href="regulations">Regulamin</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact">Kontakt</a></li>
@@ -39,6 +39,7 @@
             </form>
         </div>
     </nav>
+    <!-- Header Section -->
     <header class="bg-dark py-5">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
@@ -47,59 +48,51 @@
             </div>
         </div>
     </header>
+    <!-- Main content section -->
     <div class="content">
-    <div class="container">
-    <div class="row align-items-stretch justify-content-center no-gutters">
-    <div class="col-md-7">
-    <div class="form h-100 contact-wrap p-5">
-    <h3 class="text-center">Wystaw nam opinię</h3>
-    <form class="mb-5" method="post" id="contactForm" name="contactForm" novalidate="novalidate" th:action="@{/uploadOpinion}">
-        <div class="row">
-        <div class="col-md-6 form-group mb-3">
-        <label for="" class="col-form-label">Name *</label>
-        <input type="text" class="form-control" name="name" id="name" placeholder="Your name">
+     <div class="container">
+        <div class="row align-items-stretch justify-content-center no-gutters">
+            <div class="col-md-7">
+                <div class="form h-100 contact-wrap p-5">
+                    <h3 class="text-center">Wystaw nam opinię</h3>
+                    <form class="mb-5" method="post" id="contactForm" name="contactForm" novalidate="novalidate" th:action="@{/uploadOpinion}">
+                        <div class="row">
+                            <div class="col-md-6 form-group mb-3">
+                                <label for="" class="col-form-label">Name *</label>
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Your name">
+                            </div>
+                            <div class="col-md-6 form-group mb-3">
+                                <label for="" class="col-form-label">Email *</label>
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Your email">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 form-group mb-3">
+                                <label for="budget" class="col-form-label">Subject</label>
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Your subject">
+                            </div>
+                        </div>
+                        <div class="row mb-5">
+                            <div class="col-md-12 form-group mb-3">
+                                <label for="message" class="col-form-label">Message *</label>
+                                <textarea class="form-control" name="message" id="message" cols="30" rows="4" placeholder="Write your message"></textarea>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="col-md-5 form-group text-center">
+                                <input type="submit" value="Send Message" class="btn btn-block btn-primary rounded-0 py-2 px-4">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6 form-group mb-3">
-        <label for="" class="col-form-label">Email *</label>
-        <input type="email" class="form-control" name="email" id="email" placeholder="Your email">
-        </div>
-        </div>
-        <div class="row">
-        <div class="col-md-12 form-group mb-3">
-        <label for="budget" class="col-form-label">Subject</label>
-        <input type="text" class="form-control" name="subject" id="subject" placeholder="Your subject">
-        </div>
-        </div>
-        <div class="row mb-5">
-        <div class="col-md-12 form-group mb-3">
-        <label for="message" class="col-form-label">Message *</label>
-        <textarea class="form-control" name="message" id="message" cols="30" rows="4" placeholder="Write your message"></textarea>
-        </div>
-        </div>
-        <div class="row justify-content-center">
-        <div class="col-md-5 form-group text-center">
-        <input type="submit" value="Send Message" class="btn btn-block btn-primary rounded-0 py-2 px-4">
-
-        </div>
-        </div>
-    </form>
-    
     </div>
-    </div>
-    </div>
-    </div>
-    </div>
+   </div>
+   <!-- Footer -->
     <footer class="py-5 bg-dark">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Wypozyczalnia</p></div>
     </footer>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/main.js"></script>
-    <script defer="" src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon="{&quot;rayId&quot;:&quot;8288b2bdfeb366e0&quot;,&quot;version&quot;:&quot;2023.10.0&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;}" crossorigin="anonymous"></script>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     </body>
