--- a/src/main/resources/templates/CustomerView/opinions.html
+++ b/src/main/resources/templates/CustomerView/opinions.html
@@ -30,11 +30,11 @@
                     <li class="nav-item"><a class="nav-link" href="contact">Kontakt</a></li>
                 </ul>
             </div>
-            <form class="d-flex">
+            <form class="d-flex" action="cart" method="get">
                 <button class="btn btn-outline-dark" type="submit">
                     <i class="bi-cart-fill me-1"></i>
                     Koszyk
-                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                    <span class="badge bg-dark text-white ms-1 rounded-pill" th:text=${cartSize}></span>
                 </button>
             </form>
         </div>
