Adding CustomerOrder table in DB, adding summary webside and posibility to making order by customer, adding alerts when cutomer make order and when doesn't fill all gaps in opinion form

--- a/src/main/resources/templates/CustomerView/index.html
+++ b/src/main/resources/templates/CustomerView/index.html
@@ -16,6 +16,9 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
+        <div th:if="${message}" class="alert alert-success">
+            <p th:text="${message}"></p>
+        </div>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
