--- a/src/main/resources/templates/CustomerView/opinions.html
+++ b/src/main/resources/templates/CustomerView/opinions.html
@@ -16,6 +16,9 @@
         <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
+      <div th:if="${error}" class="alert alert-danger">
+          <p th:text="${error}"></p>
+      </div>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
