--- a/src/main/resources/templates/CustomerView/summary.html
+++ b/src/main/resources/templates/CustomerView/summary.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>TODO summary form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formularz Wypożyczalni Rowerowej</title>
 </head>
 <body>
+
+<h2>Formularz Wypożyczalni Rowerowej - Podsumowanie</h2>
+
+<form th:action="@{/makeOrder}" method="post">
+    <label for="firstName">Imię:</label>
+    <input type="text" id="firstName" name="firstName" required><br>
+
+    <label for="lastName">Nazwisko:</label>
+    <input type="text" id="lastName" name="lastName" required><br>
+
+    <label for="address">Adres:</label>
+    <input type="text" id="address" name="address" required><br>
+
+    <label for="city">Miasto:</label>
+    <input type="text" id="city" name="city" required><br>
+
+    <label for="postalCode">Kod pocztowy:</label>
+    <input type="text" id="postalCode" name="postalCode" required><br>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required><br>
+
+    <label for="phoneNum">Numer telefonu:</label>
+    <input type="tel" id="phoneNum" name="phoneNum" required><br>
+
+    <input type="submit" value="Płatność">
+
+</form>
 
 </body>
 </html>
