--- a/src/main/resources/templates/CustomerView/aboutUs.html
+++ b/src/main/resources/templates/CustomerView/aboutUs.html
@@ -52,27 +52,20 @@
     <div class="col-9">
         <div id="carouselExample" class="carousel slide" style="left: 15%;">
             <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="first.jpg" class="d-block w-100" alt="first"> <!-- The src path will be changed, it is just a prototype-->
-                <div class="carousel-caption d-none d-md-block">
-                    <h3 >Wyrusz z nami w górską przygodę</h3>
-                    <p>W naszej ofercie posiadamy szeroki wybór rowerów, które sprawią, że Twoja wycieczka pozostanie niezapomniana</p>
+                <div class="carousel-item active">
+                    <img th:src="@{'/assets/first.jpg'}" class="d-block w-100" alt="first"> <!-- The src path will be changed, it is just a prototype-->
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 >Wyrusz z nami w górską przygodę</h3>
+                        <p>W naszej ofercie posiadamy szeroki wybór rowerów, które sprawią, że Twoja wycieczka pozostanie niezapomniana</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img src="first.jpg" class="d-block w-100" alt="second">  <!-- The src path, as well as image and text will be changed, it is just a prototype-->
-                <div class="carousel-caption d-none d-md-block">
-                    <h3>Wyrusz z nami w górską przygodę</h3>
-                    <p>W naszej ofercie posiadamy szeroki wybór rowerów, które sprawią, że Twoja wycieczka pozostanie niezapomniana</p>
-                  </div>
-            </div>
-            <div class="carousel-item">
-                <img src="first.jpg" class="d-block w-100" alt="third"> <!-- The src path, as well as image and text will be changed, it is just a prototype-->
-                <div class="carousel-caption d-none d-md-block">
-                    <h3>Wyrusz z nami w górską przygodę</h3>
-                    <p>W naszej ofercie posiadamy szeroki wybór rowerów, które sprawią, że Twoja wycieczka pozostanie niezapomniana</p>
-                  </div>
-            </div>
+                <div class="carousel-item">
+                    <img th:src="@{'/assets/second.jpg'}" class="d-block w-100" alt="second">  <!-- The src path, as well as image and text will be changed, it is just a prototype-->
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Wyrusz z nami w górską przygodę</h3>
+                        <p>W naszej ofercie posiadamy szeroki wybór rowerów, które sprawią, że Twoja wycieczka pozostanie niezapomniana</p>
+                      </div>
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -93,6 +86,6 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+<!--    <script src="js/scripts.js"></script>-->
     </body>
 </html>
